# gnosis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.lab.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: documentation.mdc
docs/architecture/: overview.md
docs/research/: gnosis_algorithm_design.md
docs/specs/: GNOSIS_FINAL_CANONICAL.md  gnosis_spec_v1_1.md
src/gnosis/: __init__.py
src/gnosis/engine/: __init__.py  applicability.py  evidence.py  ingestion.py  lifecycle.py  memory.py  packet.py  patterns.py  relationships.py  retrieval.py
src/gnosis/models/: __init__.py  context.py
tests/unit/: test_applicability.py  test_pipeline_contracts.py
